--- a/chapter01.ipynb
+++ b/chapter01.ipynb
@@ -37,6 +37,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "사용 패키지 버전:\n",
+        "* transformers 4.57.3"
+      ],
+      "metadata": {
+        "id": "wX6ehc2ay-3V"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "# 깃허브에서 위젯 상태 오류를 피하기 위해 진행 표시줄을 나타내지 않도록 설정합니다.\n",
@@ -97,7 +107,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "DiUi4Wu1FCyN",
-        "outputId": "fe986508-53fe-4e31-c8e0-33b4215125c4"
+        "outputId": "e2bd94d3-3385-4868-cebf-494ab82adb33"
       },
       "outputs": [
         {
@@ -140,7 +150,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "hkR7LBmiyXmY",
-        "outputId": "6f12b579-08b3-486d-91b6-dde9ad9391a7"
+        "outputId": "b52c8dcb-248d-4871-9cbf-08d20796475e"
       },
       "outputs": [
         {
@@ -160,6 +170,30 @@
         "# 출력 생성\n",
         "output = generator(messages)\n",
         "print(output[0][\"generated_text\"])"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!pip list | grep transformers"
+      ],
+      "metadata": {
+        "id": "oufHDkF3y1XE",
+        "outputId": "457a7e15-6c84-42c1-9c5b-f25bd4c70a0f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "sentence-transformers                    5.2.0\n",
+            "transformers                             4.57.3\n"
+          ]
+        }
       ]
     }
   ],
