Colab을 통해 생성됨

--- a/chapter03.ipynb
+++ b/chapter03.ipynb
@@ -36,55 +36,14 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": 1,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "78YkTOy0LSXb",
-        "outputId": "b1766cf2-77de-4209-8c81-19b94e5d7405"
-      },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Collecting transformers==4.48.3\n",
-            "  Downloading transformers-4.48.3-py3-none-any.whl.metadata (44 kB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m44.4/44.4 kB\u001b[0m \u001b[31m2.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hRequirement already satisfied: filelock in /usr/local/lib/python3.11/dist-packages (from transformers==4.48.3) (3.18.0)\n",
-            "Requirement already satisfied: huggingface-hub<1.0,>=0.24.0 in /usr/local/lib/python3.11/dist-packages (from transformers==4.48.3) (0.34.3)\n",
-            "Requirement already satisfied: numpy>=1.17 in /usr/local/lib/python3.11/dist-packages (from transformers==4.48.3) (2.0.2)\n",
-            "Requirement already satisfied: packaging>=20.0 in /usr/local/lib/python3.11/dist-packages (from transformers==4.48.3) (25.0)\n",
-            "Requirement already satisfied: pyyaml>=5.1 in /usr/local/lib/python3.11/dist-packages (from transformers==4.48.3) (6.0.2)\n",
-            "Requirement already satisfied: regex!=2019.12.17 in /usr/local/lib/python3.11/dist-packages (from transformers==4.48.3) (2024.11.6)\n",
-            "Requirement already satisfied: requests in /usr/local/lib/python3.11/dist-packages (from transformers==4.48.3) (2.32.3)\n",
-            "Requirement already satisfied: tokenizers<0.22,>=0.21 in /usr/local/lib/python3.11/dist-packages (from transformers==4.48.3) (0.21.4)\n",
-            "Requirement already satisfied: safetensors>=0.4.1 in /usr/local/lib/python3.11/dist-packages (from transformers==4.48.3) (0.6.1)\n",
-            "Requirement already satisfied: tqdm>=4.27 in /usr/local/lib/python3.11/dist-packages (from transformers==4.48.3) (4.67.1)\n",
-            "Requirement already satisfied: fsspec>=2023.5.0 in /usr/local/lib/python3.11/dist-packages (from huggingface-hub<1.0,>=0.24.0->transformers==4.48.3) (2025.3.0)\n",
-            "Requirement already satisfied: typing-extensions>=3.7.4.3 in /usr/local/lib/python3.11/dist-packages (from huggingface-hub<1.0,>=0.24.0->transformers==4.48.3) (4.14.1)\n",
-            "Requirement already satisfied: hf-xet<2.0.0,>=1.1.3 in /usr/local/lib/python3.11/dist-packages (from huggingface-hub<1.0,>=0.24.0->transformers==4.48.3) (1.1.7)\n",
-            "Requirement already satisfied: charset-normalizer<4,>=2 in /usr/local/lib/python3.11/dist-packages (from requests->transformers==4.48.3) (3.4.2)\n",
-            "Requirement already satisfied: idna<4,>=2.5 in /usr/local/lib/python3.11/dist-packages (from requests->transformers==4.48.3) (3.10)\n",
-            "Requirement already satisfied: urllib3<3,>=1.21.1 in /usr/local/lib/python3.11/dist-packages (from requests->transformers==4.48.3) (2.5.0)\n",
-            "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.11/dist-packages (from requests->transformers==4.48.3) (2025.8.3)\n",
-            "Downloading transformers-4.48.3-py3-none-any.whl (9.7 MB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m9.7/9.7 MB\u001b[0m \u001b[31m76.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hInstalling collected packages: transformers\n",
-            "  Attempting uninstall: transformers\n",
-            "    Found existing installation: transformers 4.55.0\n",
-            "    Uninstalling transformers-4.55.0:\n",
-            "      Successfully uninstalled transformers-4.55.0\n",
-            "Successfully installed transformers-4.48.3\n"
-          ]
-        }
-      ],
+      "cell_type": "markdown",
       "source": [
-        "# Phi-3 모델과 호환성 때문에 transformers 4.48.3 버전을 사용합니다.\n",
-        "!pip install transformers==4.48.3"
-      ]
+        "사용 패키지 버전\n",
+        "* transformers 4.57.3"
+      ],
+      "metadata": {
+        "id": "78YkTOy0LSXb"
+      }
     },
     {
       "cell_type": "code",
@@ -97,7 +56,7 @@
       "metadata": {
         "id": "8lVE_3idzVyF"
       },
-      "execution_count": 2,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -111,28 +70,21 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "-5RLd6dI-Ytm",
-        "outputId": "9cbdf509-7ea2-4af7-fbff-947232abf16c"
+        "outputId": "5af63cb6-97f1-4bc8-99c2-141fc995e10b"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "A new version of the following files was downloaded from https://huggingface.co/microsoft/Phi-3-mini-4k-instruct:\n",
-            "- configuration_phi3.py\n",
-            ". Make sure to double-check they do not contain any added malicious code. To avoid downloading new versions of the code file, you can pin a revision.\n",
-            "A new version of the following files was downloaded from https://huggingface.co/microsoft/Phi-3-mini-4k-instruct:\n",
-            "- modeling_phi3.py\n",
-            ". Make sure to double-check they do not contain any added malicious code. To avoid downloading new versions of the code file, you can pin a revision.\n",
-            "WARNING:transformers_modules.microsoft.Phi-3-mini-4k-instruct.0a67737cc96d2554230f90338b163bc6380a2a85.modeling_phi3:`flash-attention` package not found, consider installing for better performance: No module named 'flash_attn'.\n",
-            "WARNING:transformers_modules.microsoft.Phi-3-mini-4k-instruct.0a67737cc96d2554230f90338b163bc6380a2a85.modeling_phi3:Current `flash-attention` does not support `window_size`. Either upgrade or use `attn_implementation='eager'`.\n",
-            "Device set to use cuda\n"
+            "Device set to use cuda\n",
+            "The following generation flags are not valid and may be ignored: ['temperature']. Set `TRANSFORMERS_VERBOSITY=info` for more details.\n"
           ]
         }
       ],
@@ -145,8 +97,7 @@
         "model = AutoModelForCausalLM.from_pretrained(\n",
         "    \"microsoft/Phi-3-mini-4k-instruct\",\n",
         "    device_map=\"cuda\",\n",
-        "    torch_dtype=\"auto\",\n",
-        "    trust_remote_code=True,\n",
+        "    dtype=\"auto\"\n",
         ")\n",
         "\n",
         "# Create a pipeline\n",
@@ -156,7 +107,7 @@
         "    tokenizer=tokenizer,\n",
         "    return_full_text=False,\n",
         "    max_new_tokens=50,\n",
-        "    do_sample=False,\n",
+        "    do_sample=False\n",
         ")"
       ]
     },
@@ -171,24 +122,15 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "17h6TPHluJ-i",
-        "outputId": "879cf4fb-36ff-4289-f91a-0214c23ccaba"
+        "outputId": "613c9340-827f-4254-9670-79a8493b50f7"
       },
       "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "The `seen_tokens` attribute is deprecated and will be removed in v4.41. Use the `cache_position` model input instead.\n",
-            "`get_max_cache()` is deprecated for all Cache classes. Use `get_max_cache_shape()` instead. Calling `get_max_cache()` will raise error from v4.48\n",
-            "WARNING:transformers_modules.microsoft.Phi-3-mini-4k-instruct.0a67737cc96d2554230f90338b163bc6380a2a85.modeling_phi3:You are not running the flash-attention implementation, expect numerical differences.\n"
-          ]
-        },
         {
           "output_type": "stream",
           "name": "stdout",
@@ -197,7 +139,7 @@
             "\n",
             "Dear Sarah,\n",
             "\n",
-            "I hope this message finds you well. I am writing to express my deepest apologies for the unfortunate incident that occurred in\n"
+            "I hope this message finds you well. I am writing to express my sincerest apologies for the unfortunate incident that occurred\n"
           ]
         }
       ],
@@ -211,13 +153,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 4,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "eoFkdTd6_g5o",
-        "outputId": "367aa5b7-51b1-454a-f75d-c513cf072c7e"
+        "outputId": "14fdf237-2cf0-4222-f41a-894ac7bc666f"
       },
       "outputs": [
         {
@@ -227,26 +169,25 @@
             "Phi3ForCausalLM(\n",
             "  (model): Phi3Model(\n",
             "    (embed_tokens): Embedding(32064, 3072, padding_idx=32000)\n",
-            "    (embed_dropout): Dropout(p=0.0, inplace=False)\n",
             "    (layers): ModuleList(\n",
             "      (0-31): 32 x Phi3DecoderLayer(\n",
             "        (self_attn): Phi3Attention(\n",
             "          (o_proj): Linear(in_features=3072, out_features=3072, bias=False)\n",
             "          (qkv_proj): Linear(in_features=3072, out_features=9216, bias=False)\n",
-            "          (rotary_emb): Phi3RotaryEmbedding()\n",
             "        )\n",
             "        (mlp): Phi3MLP(\n",
             "          (gate_up_proj): Linear(in_features=3072, out_features=16384, bias=False)\n",
             "          (down_proj): Linear(in_features=8192, out_features=3072, bias=False)\n",
-            "          (activation_fn): SiLU()\n",
+            "          (activation_fn): SiLUActivation()\n",
             "        )\n",
-            "        (input_layernorm): Phi3RMSNorm()\n",
+            "        (input_layernorm): Phi3RMSNorm((3072,), eps=1e-05)\n",
+            "        (post_attention_layernorm): Phi3RMSNorm((3072,), eps=1e-05)\n",
             "        (resid_attn_dropout): Dropout(p=0.0, inplace=False)\n",
             "        (resid_mlp_dropout): Dropout(p=0.0, inplace=False)\n",
-            "        (post_attention_layernorm): Phi3RMSNorm()\n",
             "      )\n",
             "    )\n",
-            "    (norm): Phi3RMSNorm()\n",
+            "    (norm): Phi3RMSNorm((3072,), eps=1e-05)\n",
+            "    (rotary_emb): Phi3RotaryEmbedding()\n",
             "  )\n",
             "  (lm_head): Linear(in_features=3072, out_features=32064, bias=False)\n",
             ")\n"
@@ -268,7 +209,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 5,
       "metadata": {
         "id": "sEcxYgJxBYbJ"
       },
@@ -291,14 +232,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 6,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 36
         },
         "id": "68YUSS4GBf9Q",
-        "outputId": "72e474de-85dd-4439-9721-f631c22e3178"
+        "outputId": "8a98b320-fbe7-4a1d-b1f1-7c3d5d5b520f"
       },
       "outputs": [
         {
@@ -312,7 +253,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 7
+          "execution_count": 6
         }
       ],
       "source": [
@@ -322,13 +263,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 7,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "cWWrfC5oBjwp",
-        "outputId": "167e5460-63ef-49fc-dcbf-7bb33b364085"
+        "outputId": "ba68496c-d96f-4b18-de21-8500c57730b0"
       },
       "outputs": [
         {
@@ -339,7 +280,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 8
+          "execution_count": 7
         }
       ],
       "source": [
@@ -348,13 +289,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 8,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "nC1PdOnTBnxZ",
-        "outputId": "379f59ae-d5c7-4a51-a4c7-fc7f955fcb9b"
+        "outputId": "a9c18112-de39-4eea-c13f-5051d5d6974d"
       },
       "outputs": [
         {
@@ -365,7 +306,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 9
+          "execution_count": 8
         }
       ],
       "source": [
@@ -383,7 +324,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 9,
       "metadata": {
         "id": "B0n6JhNHBrin"
       },
@@ -398,13 +339,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 10,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "BwIvt6jSByAF",
-        "outputId": "877b9a14-c131-4013-a699-6e72029a15ee"
+        "outputId": "ef4e9d1a-300d-4470-a320-067dc2d11603",
+        "collapsed": true
       },
       "outputs": [
         {
@@ -418,7 +360,7 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "4.6 s ± 231 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+            "4.47 s ± 218 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
           ]
         }
       ],
@@ -434,20 +376,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 11,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "dFb1dcvJByCW",
-        "outputId": "a23dd919-a3b0-4d09-816c-4bc7cd9506f9"
+        "outputId": "4a01574d-f429-49af-c1f9-149840b8c43a"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "33.4 s ± 467 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+            "30.7 s ± 144 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
           ]
         }
       ],
